fixing alignment for field-error inlinw

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -341,7 +341,7 @@
 
 /* Field Error Inside Field */
 .field-error-inside { @apply relative }
-.field-error-inside .field-error { @apply absolute top-0 bottom-0 right-0 m-1 p-1 }
+.field-error-inside .field-error { @apply absolute top-0 bottom-0 right-0 m-1 p-2 }
 
 
 /* ------------------------------------------------
